--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
-flask
-flask-cors
-flask-session
-flask-login
-werkzeug
-flask_sqlalchemy
-chromadb
-sentence-transformers
-ollama
-pypdf2
-pdfplumber
-python-docx
-python-dotenv
+
+Flask==3.0.2
+flask-cors==4.0.0
+flask-session==0.6.0
+flask-login==0.6.3
+Werkzeug==3.0.1
+Flask-SQLAlchemy==3.1.1
+
+chromadb==0.4.24
+sentence-transformers==2.6.1
+ollama==0.1.9
+
+PyPDF2==3.0.1
+pdfplumber==0.11.4
+python-docx==1.1.0
+numpy<2.0
+
+python-dotenv==1.0.1
